Fixed overflow issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -102,25 +102,7 @@ a {
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
-}
-::-webkit-scrollbar:hover {
-  width: 12px;
-}
-
-
-::-webkit-scrollbar-track-piece{
-  background: var(--background); 
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--primary); 
-  height: 300px;
-  cursor: grab;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  border-radius: 10px;
+  width: 0;
 }
 
 @media (max-width: 700px) {
@@ -131,14 +113,6 @@ a {
     --sub-nav: 1.2em;
     --body: 1em;
     --small: 0.8em;
-  }
-
-
-  ::-webkit-scrollbar {
-    width: 0;
-  }
-  ::-webkit-scrollbar:hover {
-    width: 0;
   }
 
   nav {
